[EuiPanel] Expanding usages for layout purposes (#4194)
* [EuiPanel] Added `color` and `borderRadius` options
* [EuiPanel] `hasShadow` defaults to `true` but is the slight version
  - color and radius modifiers are now in the mixin
* Fix up usages
* Updated docs and added deprecation notices

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -12,7 +12,7 @@
 .euiCard {
   display: flex;
   flex-direction: column;
-  min-height: 1px; /* 2 */// sass-lint:disable-line mixins-before-declarations
+  min-height: 1px; /* 2 */
 
   &.euiCard-isDisabled {
     cursor: not-allowed; // duplicate property due to Chrome bug
