--- a/src/components/comment_list/_comment_event.scss
+++ b/src/components/comment_list/_comment_event.scss
@@ -25,6 +25,8 @@
 }
 
 .euiCommentEvent--regular {
+  @include euiBottomShadowMedium;
+  border-radius: $euiBorderRadius;
   border: $euiBorderThin;
 
   .euiCommentEvent__header {
