--- a/src/components/drag_and_drop/_droppable.scss
+++ b/src/components/drag_and_drop/_droppable.scss
@@ -20,6 +20,11 @@
 
 @include euiPanel($selector: '.euiDroppable--withPanel');
 
+.euiDroppable--withPanel {
+  @include euiBottomShadowMedium;
+  border-radius: $euiBorderRadius;
+}
+
 .euiDroppable--noGrow {
   flex-grow: 0;
 }
