--- a/src/global_styling/variables/_borders.scss
+++ b/src/global_styling/variables/_borders.scss
@@ -5,6 +5,7 @@ $euiBorderWidthThick: 2px !default;
 
 $euiBorderColor: $euiColorLightShade !default;
 $euiBorderRadius: 4px !default;
+$euiBorderRadiusSmall: $euiBorderRadius / 2 !default;
 $euiBorderThick: $euiBorderWidthThick solid $euiBorderColor !default;
 $euiBorderThin: $euiBorderWidthThin solid $euiBorderColor !default;
 $euiBorderEditable: $euiBorderWidthThick dotted $euiBorderColor !default;
