--- a/src/global_styling/variables/_form.scss
+++ b/src/global_styling/variables/_form.scss
@@ -5,7 +5,7 @@ $euiFormControlCompressedHeight: $euiSizeXL !default;
 $euiFormControlPadding: $euiSizeM !default;
 $euiFormControlCompressedPadding: $euiSizeS !default;
 $euiFormControlBorderRadius: 0 !default;
-$euiFormControlCompressedBorderRadius: $euiBorderRadius / 2 !default;
+$euiFormControlCompressedBorderRadius: $euiBorderRadiusSmall !default;
 
 $euiRadioSize: $euiSize !default;
 $euiCheckBoxSize: $euiSize !default;
