--- a/src/global_styling/variables/_panel.scss
+++ b/src/global_styling/variables/_panel.scss
@@ -1,5 +1,16 @@
 $euiPanelPaddingModifiers: (
-  'paddingSmall': $euiSizeS,
+  'paddingSmall':  $euiSizeS,
   'paddingMedium': $euiSize,
-  'paddingLarge': $euiSizeL
+  'paddingLarge':  $euiSizeL
+) !default;
+
+$euiPanelBorderRadiusModifiers: (
+  'borderRadiusNone': 0,
+  'borderRadiusMedium': $euiBorderRadius,
+) !default;
+
+$euiPanelBackgroundColorModifiers: (
+  'transparent': transparent,
+  'plain': $euiColorEmptyShade,
+  'subdued': $euiColorLightestShade,
 ) !default;
