--- a/src/themes/eui-amsterdam/global_styling/mixins/_panel.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_panel.scss
@@ -3,15 +3,14 @@
     @error 'A $selector must be provided to @mixin euiPanel().';
   } @else {
     #{$selector} {
-
-      @include euiBottomShadowSmall;
-      background-color: $euiColorEmptyShade;
-      border: none;
-      border-radius: $euiBorderRadius;
       flex-grow: 1;
 
       &#{$selector}--flexGrowZero {
         flex-grow: 0;
+      }
+
+      &#{$selector}--shadow {
+        @include euiBottomShadowMedium;
       }
 
       &#{$selector}--isClickable {
@@ -25,25 +24,23 @@
 
         &:hover,
         &:focus {
-          @include euiSlightShadowHover;
+          @include euiBottomShadow($color: $euiShadowColor);
           transform: translateY(-2px);
           cursor: pointer;
         }
       }
 
-      &#{$selector}--shadow {
-        @include euiBottomShadowMedium;
-
-        @if (lightness($euiTextColor) < 50) {
-          border-bottom-color: transparentize($euiShadowColor, .5);
-        } @else {
-          // Applied again here in case dark theme overrides light
-          border-bottom-color: $euiBorderColor;
+      // Border Radii
+      @each $modifier, $amount in $euiPanelBorderRadiusModifiers {
+        &#{$selector}--#{$modifier} {
+          border-radius: $amount;
         }
+      }
 
-        &#{$selector}--isClickable:hover,
-        &#{$selector}--isClickable:focus {
-          @include euiBottomShadow($color: $euiShadowColor);
+      // Background colors
+      @each $modifier, $amount in $euiPanelBackgroundColorModifiers {
+        &#{$selector}--#{$modifier} {
+          background-color: $amount;
         }
       }
     }
