--- a/src/themes/eui-amsterdam/overrides/_image.scss
+++ b/src/themes/eui-amsterdam/overrides/_image.scss
@@ -4,3 +4,7 @@
     text-shadow: 0 1px 2px transparentize($euiColorInk, .6);
   }
 }
+
+.euiImage-isFullScreenCloseIcon {
+  fill: $euiColorGhost;
+}
