--- a/src/components/color_picker/color_palette_picker/_color_palette_picker.scss
+++ b/src/components/color_picker/color_palette_picker/_color_palette_picker.scss
@@ -3,14 +3,7 @@
     @include euiFontSizeXS;
   }
 
-  &__itemGradient {
-    border-radius: $euiBorderRadius;
-    overflow: hidden;
-    height: $euiSizeS;
-    box-shadow: inset 0 0 0 1px transparentize($euiColorFullShade, .9);
-  }
-
-  &__itemTitle + &__itemGradient {
+  &__itemTitle + .euiColorPaletteDisplay {
     margin-top: $euiSizeXS;
   }
 }
