[EuiFormControlLayout] Fix prepend/append border radius in Amsterdam (#4196)

--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -104,7 +104,7 @@
     cursor: default !important; // pointer cursor on some form labels but not others is confusing
 
     // If the next sibling is not the input, pull it closer to the text to reduce space
-    + *:not(.euiFormControlLayout__childrenWrapper) {
+    + *:not(.euiFormControlLayout__childrenWrapper):not(input) {
       margin-left: -$euiFormControlPadding;
     }
   }
