--- a/src/components/form/form_control_layout/_form_control_layout_delimited.scss
+++ b/src/components/form/form_control_layout/_form_control_layout_delimited.scss
@@ -5,6 +5,10 @@
   align-items: stretch;
   padding: 1px; /* 1 */
 
+  .euiFormControlLayoutDelimited__delimeter {
+    background-color: $euiFormBackgroundColor;
+  }
+
   > .euiFormControlLayout__childrenWrapper {
     display: flex;
     align-items: center;
@@ -40,14 +44,19 @@
   // Target when the euiFormControlLayout is disabled without specifying the full class name in case it ever changes
   &[class*='-isDisabled'] {
     @include euiFormControlDisabledStyle;
+
+    .euiFormControlLayoutDelimited__delimeter {
+      background-color: $euiFormBackgroundDisabledColor;
+    }
   }
 
   // Target when the euiFormControlLayout is readOnly without specifying the full class name in case it ever changes
   &[class*='--readOnly'] {
     @include euiFormControlReadOnlyStyle;
 
-    input {
-      background-color: transparent; // Ensures the input and layout don't double up on background color
+    input,
+    .euiFormControlLayoutDelimited__delimeter {
+      background-color: $euiFormBackgroundReadOnlyColor;
     }
   }
 
@@ -80,7 +89,6 @@
 
 .euiFormControlLayoutDelimited__delimeter {
   // sass-lint:disable-block no-important
-  background-color: transparent !important; // Override .euiFormControlLayout--group > .euiFormLabel
   line-height: 1 !important; // Override EuiText line-height
   flex: 0 0 auto;
   padding-left: $euiFormControlPadding / 2;
