--- a/src/themes/eui-amsterdam/global_styling/variables/_form.scss
+++ b/src/themes/eui-amsterdam/global_styling/variables/_form.scss
@@ -1,6 +1,8 @@
 $euiFormControlBorderRadius: $euiBorderRadius;
 $euiFormControlCompressedBorderRadius: $euiBorderRadiusSmall;
+$euiFormInputGroupBorder: none;
+$euiFormBackgroundReadOnlyColor: $euiColorEmptyShade;
 
-$euiFormControlBoxShadow: 0 0;
+$euiFormControlBoxShadow: 0 0 transparent;
 
 $euiCheckboxBorderRadius: $euiBorderRadiusSmall;
