--- a/src/global_styling/variables/_typography.scss
+++ b/src/global_styling/variables/_typography.scss
@@ -44,7 +44,8 @@ $euiFontSizeXL:     $euiFontSize * nth($euiTextScale, 2) !default; // 28px
 $euiFontSizeXXL:    $euiFontSize * nth($euiTextScale, 1) !default; // 36px
 
 // Line height
-$euiLineHeight:     1.5;
+$euiLineHeight:     1.5 !default;
+$euiBodyLineHeight: 1 !default;
 
 // Font weights
 $euiFontWeightLight:    300 !default;
