--- a/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
@@ -1,7 +1,23 @@
 // Import base theme first, then override
-@import '../../../../global_styling/mixins/index';
-
-@import 'button';
-@import 'panel';
+@import '../../../../global_styling/mixins/responsive';
+@import '../../../../global_styling/mixins/shadow';
 @import 'shadow';
+@import '../../../../global_styling/mixins/size';
+@import '../../../../global_styling/mixins/typography';
+@import 'typography';
+@import '../../../../global_styling/mixins/helpers';
+@import '../../../../global_styling/mixins/states';
+@import '../../../../global_styling/mixins/icons';
+
+@import '../../../../global_styling/mixins/beta_badge';
+@import '../../../../global_styling/mixins/button';
+@import 'button';
+@import '../../../../global_styling/mixins/form';
 @import 'form';
+@import '../../../../global_styling/mixins/header';
+@import '../../../../global_styling/mixins/loading';
+@import '../../../../global_styling/mixins/panel';
+@import 'panel';
+@import '../../../../global_styling/mixins/popover';
+@import '../../../../global_styling/mixins/range';
+@import '../../../../global_styling/mixins/tool_tip';
