[Amsterdam] Unify focus states (#4242)
* Resetting _reset and updating focus ring mixin
* Fix us usages of `euiCustomControlFocused`
* Change base outline color to `currentColor` and fix up base buttons
* Fixing up more instances
- Breadcrumbs (not great)
- Button groups (still missing on single-select)
- Tabs
- Links
* Cleaning up the diff between focus and hover states
* Consolidating focus background colors
* Fix up usages of $euiFocusRingColor
* Creating more mixins for interactive states and cleaning up focus ring mixin
* Fixing cross-browser issues and removing faux outline option
- Fixes up the checkbox,radio,switch outlines
- Reduces opacity of focus backgrounds
- Fixes link color in Ams. dark mode

--- a/src/components/collapsible_nav/_collapsible_nav.scss
+++ b/src/components/collapsible_nav/_collapsible_nav.scss
@@ -24,12 +24,8 @@
 
   &:focus {
     @include euiFocusRing;
-  }
-
-  &,
-  &:focus {
     // Override default `EuiButtonEmpty` :focus background to ensure better contrast
-    background: $euiColorEmptyShade;
+    background: $euiColorEmptyShade !important; // sass-lint:disable-line no-important
   }
 }
 
