--- a/src/components/combo_box/combo_box_input/_combo_box_input.scss
+++ b/src/components/combo_box/combo_box_input/_combo_box_input.scss
@@ -2,11 +2,10 @@
   max-width: 100%;
 
   // Ensure that no input states are visible on the hidden input
-  input[aria-hidden='true'] {
+  input {
     // sass-lint:disable-block no-important
     border: none !important;
     box-shadow: none !important;
     outline: none !important;
   }
-
 }
