--- a/src/components/datagrid/_data_grid_column_sorting.scss
+++ b/src/components/datagrid/_data_grid_column_sorting.scss
@@ -26,18 +26,17 @@
 
 .euiDataGridColumnSorting__fieldList {
   @include euiYScrollWithShadows;
+  padding-top: $euiSizeXS;
+  padding-bottom: $euiSizeXS;
   max-height: 300px;
 }
 
 .euiDataGridColumnSorting__field {
+  @include euiInteractiveStates;
   display: block;
-  padding: $euiSizeXS;
+  padding: $euiSizeXS $euiSizeS;
   width: 100%;
-
-  &:focus {
-    background: $euiFocusBackgroundColor;
-    text-decoration: underline;
-  }
+  outline-offset: -$euiFocusRingSize;
 }
 
 .euiDataGridColumnSorting__orderButtons {
