--- a/src/components/text/_text.scss
+++ b/src/components/text/_text.scss
@@ -112,15 +112,15 @@
   a:not([class]) {
     color: $euiLinkColor;
 
-    &:hover {
+    &:hover,
+    &:focus {
       color: darken($euiLinkColor, 10%);
       text-decoration: underline;
     }
 
     &:focus {
-      text-decoration: underline;
-      outline: solid 3px transparentize($euiLinkColor, .9);
-      background-color: transparentize($euiLinkColor, .9);
+      @include euiFocusBackground($euiLinkColor);
+      @include euiFocusRing;
     }
   }
 
