--- a/src/themes/eui-amsterdam/global_styling/index.scss
+++ b/src/themes/eui-amsterdam/global_styling/index.scss
@@ -13,4 +13,4 @@
 @import '../../../global_styling/utility/index';
 
 // The reset file makes use of variables and mixins
-@import '../../../global_styling/reset/index';
+@import 'reset/index';
