--- a/src/themes/eui-amsterdam/global_styling/mixins/_form.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_form.scss
@@ -4,6 +4,7 @@
   background-color: tintOrShade($euiColorEmptyShade, 0%, 40%);
   background-image: euiFormControlGradient();
   background-size: 100% 100%; // 1
+  outline: none; // Blanket remove all outlines relying on our own bottom border
 
   @if ($borderOnly) {
     box-shadow: inset 0 0 0 1px $euiFormBorderColor;
