--- a/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
@@ -6,7 +6,7 @@
 @import '../../../../global_styling/mixins/typography';
 @import 'typography';
 @import '../../../../global_styling/mixins/helpers';
-@import '../../../../global_styling/mixins/states';
+@import 'states';
 @import '../../../../global_styling/mixins/icons';
 
 @import '../../../../global_styling/mixins/beta_badge';
