--- a/src/themes/eui-amsterdam/overrides/_form_control_layout.scss
+++ b/src/themes/eui-amsterdam/overrides/_form_control_layout.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  [class*='euiButton']:focus {
+    @include euiFocusRing(null, 'inner');
+  }
+
   .euiToolTipAnchor > .euiIcon {
     @include euiFormControlSideBorderRadius($euiFormControlBorderRadius, $side: 'right', $internal: true);
   }
