--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -6,6 +6,9 @@
 @import 'code';
 @import 'context_menu';
 @import 'filter_group';
+@import 'form_control_layout';
+@import 'form_control_layout_delimited';
+@import 'form_controls';
 @import 'header';
 @import 'image';
 @import 'mark';
@@ -15,5 +18,3 @@
 @import 'progress';
 @import 'text';
 @import 'toast';
-@import 'form_control_layout';
-@import 'form_control_layout_delimited';
