--- a/src/components/context_menu/_context_menu_panel.scss
+++ b/src/components/context_menu/_context_menu_panel.scss
@@ -1,6 +1,7 @@
 .euiContextMenuPanel {
   width: 100%;
   visibility: visible;
+  outline-offset: -$euiFocusRingSize;
 
   &.euiContextMenuPanel-txInLeft {
     pointer-events: none;
@@ -36,9 +37,9 @@
 .euiContextMenuPanelTitle {
   @include euiPopoverTitle;
   padding: $euiSizeM;
-
   width: 100%;
   text-align: left;
+  outline-offset: -$euiFocusRingSize;
 
   &:enabled:hover,
   &:enabled:focus {
