--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -71,10 +71,14 @@
     padding: 0 $euiSizeS;
     width: $euiSizeXL;
     border-radius: 0;
-    background-color: $euiFormInputGroupLabelBackground;
 
-    &:focus {
-      box-shadow: inset 0 0 0 2px $euiFocusRingColor;
+    &:not(:focus) {
+      background-color: $euiFormInputGroupLabelBackground;
+    }
+
+    &:focus-visible {
+      outline: 2px solid $euiFocusRingColor;
+      outline-offset: -2px;
     }
   }
 
