--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -40,6 +40,7 @@
   &:focus {
     background-color: $euiFocusBackgroundColor;
     text-decoration: underline;
+    outline-offset: -$euiFocusRingSize;
 
     &::before {
       background-color: $euiColorLightShade;
