--- a/src/global_styling/variables/_states.scss
+++ b/src/global_styling/variables/_states.scss
@@ -7,3 +7,7 @@ $euiFocusRingAnimStartSizeLarge: 10px !default;
 // Sizing
 $euiFocusRingSizeLarge: $euiSizeXS !default;
 $euiFocusRingSize: $euiFocusRingSizeLarge * .75 !default;
+
+// Transparency
+$euiFocusTransparency: lightOrDarkTheme(.1, .3) !default;
+$euiFocusBackgroundColor: tintOrShade($euiColorPrimary, ((1 - $euiFocusTransparency) * 100%), ((1 - $euiFocusTransparency) * 100%)) !default;
