--- a/src/themes/eui-amsterdam/global_styling/mixins/_button.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_button.scss
@@ -2,14 +2,12 @@
   @include euiButtonBase;
   @include euiFont;
   @include euiFontSize;
+  @include euiButtonFocus;
 
   font-weight: $euiFontWeightMedium;
   text-decoration: none;
-  transition: all $euiAnimSpeedNormal $euiAnimSlightBounce;
-
-  // sass-lint:disable mixins-before-declarations
-  // focus states should come after all default styles
-  @include euiButtonFocus;
+  transition: background-color $euiAnimSpeedNormal ease-in-out, border-color $euiAnimSpeedNormal ease-in-out;
+  outline-offset: -1px;
 
   &:hover:not([class*='isDisabled']),
   &:focus {
@@ -18,7 +16,7 @@
 }
 
 // Creates the Amsterdam style of button with a transparent background
-@mixin euiButtonDefaultStyle($color, $transparency: .8) {
+@mixin euiButtonDefaultStyle($color, $transparency: $euiButtonDefaultTransparency) {
   $percentConversion: $transparency * 100%;
   // This variable simulates the possibly darkest background the button could be on
   // Simulates the 20% opaque color on top of the page background color
@@ -31,7 +29,8 @@
   &:not([class*='isDisabled']) {
     &:hover,
     &:focus {
-      background-color: transparentize($color, lightOrDarkTheme(.9, .65));
+      // Duplicated from inert state simply to override default theme
+      background-color: transparentize($color, $transparency);
     }
   }
 }
