--- a/src/themes/eui-amsterdam/global_styling/variables/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/variables/_index.scss
@@ -1,5 +1,6 @@
 // Import base theme first, then override
 @import '../../../../global_styling/variables/index';
+@import 'states';
 
 @import 'buttons';
 @import 'borders';
