Amsterdam: better code block contrast (#4272)
Improves the contrast of code blocks in EUI's Amsterdam theme:

* Changed the inline code color to our brand pink. Lots of trial and error here. It felt like it needed to be something that wouldn't be confused for a button / link. Purple felt like it stood out without being overpowering. The browns were an OK alternative.
* Increased the font-weight of code to 500, from 400. Because code already comes in at smaller 90% sizing, the extra weight makes them stand out a bit here.

--- a/src/components/code/_code_block.scss
+++ b/src/components/code/_code_block.scss
@@ -24,7 +24,7 @@
     @include euiCodeFont;
     display: block;
     line-height: $euiLineHeight;
-    font-weight: $euiFontWeightRegular;
+    font-weight: $euiCodeFontWeightRegular;
     font-size: inherit;
   }
 
@@ -180,7 +180,7 @@
 
   .hljs-selector-tag {
     color: $euiCodeBlockSelectorTagColor;
-    font-weight: bold;
+    font-weight: $euiCodeFontWeightBold;
   }
 
   .hljs-string,
@@ -274,7 +274,7 @@
   }
 
   .hljs-strong {
-    font-weight: bold;
+    font-weight: $euiCodeFontWeightBold;
   }
 
   .hljs-link {
