--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -3,7 +3,7 @@
 @import 'button_empty';
 @import 'button_group';
 @import 'call_out';
-@import 'code';
+@import 'code_block';
 @import 'context_menu';
 @import 'filter_group';
 @import 'form_control_layout';
