--- a/src/themes/eui-amsterdam/global_styling/variables/_typography.scss
+++ b/src/themes/eui-amsterdam/global_styling/variables/_typography.scss
@@ -16,6 +16,9 @@ $euiFontSizeXXL:  floor($euiFontSize * 2.43); // 34px // h1
 
 $euiBodyLineHeight: 1.142857143; // 16px from a 14px base font size to ensure it aligns to our 16px grid
 
+$euiCodeFontWeightRegular: 400;
+$euiCodeFontWeightBold: 700;
+
 // Use 8px increments for base gridline
 @function lineHeightFromBaseline($multiplier: 3) {
   @return convertToRem(($euiSize/2)*$multiplier);
